[project]
name = "3-advanced-rag-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.4.1",
    "beautifulsoup4>=4.14.3",
    "bs4>=0.0.2",
    "cassio>=0.1.10",
    "chromadb>=1.5.7",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.135.3",
    "groq>=0.37.1",
    "ipykernel>=7.2.0",
    "langchain-community>=0.0.38",
    "langchain-core>=0.1.53",
    "langchain-groq>=0.1.5",
    "langchain-objectbox>=0.1.0",
    "langchain-openai>=0.1.7",
    "langchainhub>=0.1.21",
    "langserve>=0.2.3",
    "pypdf>=6.9.2",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.3.0",
    "sse-starlette>=3.3.4",
    "streamlit>=1.56.0",
    "uvicorn>=0.44.0",
    "langchain>=0.1.0",
    "wikipedia>=1.4.0",
]
